Updating h00 description to include Game Maker Studio as a game engine option

--- a/_hwk/h00.md
+++ b/_hwk/h00.md
@@ -16,7 +16,7 @@ The game engine you work with will depend on your familiarity with programming i
 
 * For experienced programmers, I recommend [Unity](https://unity3d.com/). This is one of the more popular game engines that supports 2D and 3D games. Unity scripts are mainly in javascript or C# - I recommend familiarizing yourself with the environment by reading through some of their [introductory tutorials](https://unity3d.com/learn/tutorials).
 
-* For novice or beginning programmers, I recommend [Scratch](https://scratch.mit.edu/). This is a block-based programming environment that is popular to teach programming to beginners using game concepts. There are many [tutorials](https://scratch.mit.edu/help/videos/) on how to work with Scratch. Here are some sample [Scratch Projects](https://scratch.mit.edu/studios/1018092/) where you can inspect the "code" to learn how certain elements were implemented.
+* For novice or beginning programmers, I recommend [Scratch](https://scratch.mit.edu/). This is a block-based programming environment that is popular to teach programming to beginners using game concepts. There are many [tutorials](https://scratch.mit.edu/help/videos/) on how to work with Scratch. Here are some sample [Scratch Projects](https://scratch.mit.edu/studios/1018092/) where you can inspect the "code" to learn how certain elements were implemented. Another option to consider is [Game Maker Studio] (https://www.yoyogames.com/).
 
 * There are many other game engines available, and if you would like to work with a specific one, just let me know.
 
